Iinitial implementation of ingestion job