@@ -3,10 +3,13 @@ ThisBuild / scalaVersion := "2.13.16"
 ThisBuild / organization := "com.smartstar"
 
 val sparkVersion = "4.0.0"
+val isLocal = sys.env.getOrElse("ENV", "development") == "development"
+val sparkScope = if (isLocal) "compile" else "provided"
 
 // Global settings
 ThisBuild / scalacOptions ++= Seq(
-  "-encoding", "UTF-8",
+  "-encoding",
+  "UTF-8",
   "-deprecation",
   "-unchecked",
   "-feature",
@@ -16,57 +19,46 @@ ThisBuild / scalacOptions ++= Seq(
 )
 
 ThisBuild / assemblyMergeStrategy := {
-  // LOG4J PLUGIN FIX - Add this first!
-  case PathList("META-INF", "org", "apache", "logging", "log4j", "core", "config", "plugins", "Log4j2Plugins.dat") =>
-    MergeStrategy.concat  // Concatenate plugin files instead of failing
-    
+  // LOG4J PLUGIN FIX!
+  case PathList(
+        "META-INF",
+        "org",
+        "apache",
+        "logging",
+        "log4j",
+        "core",
+        "config",
+        "plugins",
+        "Log4j2Plugins.dat"
+      ) =>
+    MergeStrategy.concat // Concatenate plugin files instead of failing
+
   case x if x.endsWith("Log4j2Plugins.dat") =>
     MergeStrategy.concat
-    
-  // Rest of your merge strategy...
-  case PathList("META-INF", xs @_*) => xs match {
-    case "MANIFEST.MF" :: Nil => MergeStrategy.discard
-    case "services" :: xs => MergeStrategy.concat
-    case _ => MergeStrategy.discard
-  }
-  case x => MergeStrategy.first
 
-//  case PathList("META-INF", "MANIFEST.MF") => MergeStrategy.discard
-//  case PathList("META-INF", "services", xs*) => MergeStrategy.concat
-//  case PathList("META-INF", xs*) => MergeStrategy.discard
+  // Rest of your merge strategy...
+  case PathList("META-INF", xs @ _*) =>
+    xs match {
+      case "MANIFEST.MF" :: Nil => MergeStrategy.discard
+      case "services" :: xs     => MergeStrategy.concat
+      case _                    => MergeStrategy.discard
+    }
+  case x => MergeStrategy.first
 }
 
 lazy val assemblySettings = Seq(
   assembly / assemblyExcludedJars := {
-    val cp = (assembly / fullClasspath).value  // ✅ Use assembly scope
+    val cp = (assembly / fullClasspath).value
     cp filter { f =>
       val name = f.data.getName.toLowerCase
       name.startsWith("spark-") ||
-        name.startsWith("log4j-1.2-api")
+      name.startsWith("log4j-1.2-api")
     }
   }
 )
 
-// Include config directory in all modules
-lazy val configSettings = Seq(
-  // Include config directory in classpath
-  Compile / unmanagedResourceDirectories += (ThisBuild / baseDirectory).value / "config",
-
-  // Copy config files to target for easier access
-  Compile / resourceGenerators += Def.task {
-    val configDir = (ThisBuild / baseDirectory).value / "config"
-    val targetConfigDir = (Compile / resourceManaged).value / "config"
-
-    if (configDir.exists()) {
-      IO.copyDirectory(configDir, targetConfigDir)
-      (targetConfigDir ** "*.conf").get
-    } else {
-      Seq.empty[File]
-    }
-  }.taskValue,
-
-  // Set MODULE_NAME environment variable for each module
-  Test / envVars += "MODULE_NAME" -> name.value.replace("smartstar-", "")
+Test / javaOptions ++= Seq(
+  "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"
 )
 
 // Root project
@@ -80,19 +72,19 @@ lazy val root = (project in file("."))
 // Common dependencies
 lazy val commonDependencies = Seq(
   // Spark
-  "org.apache.spark" %% "spark-core" % sparkVersion % "provided",
-  "org.apache.spark" %% "spark-sql" % sparkVersion % "provided",
-  "org.apache.spark" %% "spark-streaming" % sparkVersion % "provided",
-  "org.apache.spark" %% "spark-mllib" % sparkVersion % "provided",
-  "org.apache.spark" %% "spark-connect-client-jvm" % sparkVersion,
-  
+  "org.apache.spark" %% "spark-core" % sparkVersion % sparkScope,
+  "org.apache.spark" %% "spark-sql" % sparkVersion % sparkScope,
+  "org.apache.spark" %% "spark-streaming" % sparkVersion % sparkScope,
+  "org.apache.spark" %% "spark-mllib" % sparkVersion % sparkScope,
+  // "org.apache.spark" %% "spark-connect-client-jvm" % sparkVersion,
+
   // Configuration
   "com.typesafe" % "config" % "1.4.4",
-  
+
   // Logging
   "org.slf4j" % "slf4j-api" % "2.0.17",
   "ch.qos.logback" % "logback-classic" % "1.5.18",
-  
+
   // Testing
   "org.scalatest" %% "scalatest" % "3.2.19" % Test,
   "org.scalamock" %% "scalamock" % "7.4.1" % Test
@@ -112,9 +104,10 @@ lazy val ingestion = (project in file("modules/ingestion"))
   .settings(
     name := "smartstar-ingestion",
     libraryDependencies ++= commonDependencies ++ Seq(
-      "org.apache.spark" %% "spark-sql" % sparkVersion % Provided,
-      "org.apache.spark" %% "spark-connect-client-jvm" % sparkVersion,
-      "io.grpc" % "grpc-netty-shaded" % "1.75.0"  // transport provider
+      "org.apache.spark" %% "spark-sql" % sparkVersion % sparkScope,
+      "org.apache.spark" %% "spark-sql-kafka-0-10" % sparkVersion % sparkScope,
+      "org.apache.hadoop" % "hadoop-aws" % "3.4.1",
+      "io.grpc" % "grpc-netty-shaded" % "1.75.0" // transport provider
     ),
     assemblySettings
   )
@@ -126,7 +119,7 @@ lazy val normalization = (project in file("modules/normalization"))
     name := "smartstar-normalization",
     libraryDependencies ++= commonDependencies ++ Seq(
       "io.delta" %% "delta-core" % "2.4.0",
-      "org.apache.spark" %% "spark-avro" % "4.0.0" % "provided"
+      "org.apache.spark" %% "spark-avro" % "4.0.0" % sparkScope
     ),
     assemblySettings
   )
@@ -137,8 +130,13 @@ lazy val analytics = (project in file("modules/analytics"))
   .settings(
     name := "smartstar-analytics",
     libraryDependencies ++= commonDependencies ++ Seq(
-      "org.apache.spark" %% "spark-mllib" % "4.0.0" % "provided",
+      "org.apache.spark" %% "spark-mllib" % "4.0.0" % sparkScope,
       "com.github.fommil.netlib" % "all" % "1.1.2"
     ),
     assemblySettings
   )
+
+// Unmanaged jars
+Compile / unmanagedJars += file(
+  "lib/iceberg-spark-runtime-4.0_2.13-1.10.0-20250822.002003-111.jar"
+)
